# DEUS-TakeHome

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: app.py  main.py
app/api/dependencies/: dependencies.py
app/api/endpoints/: cargoes.py  clients.py  contracts.py  health.py  vessels.py
app/core/: config.py  logging.py
app/db/: session.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: cargo_service.py  client_service.py  contract_service.py  vessel_service.py
requirements/: dev-requirements.txt  requirements.txt
tests/: conftest.py
tests/unit/: test_cargoes.py  test_clients.py  test_contracts.py  test_mocked.py  test_vessels.py
